// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Loader Component should handle variant loader components: variant: chart 1`] = `
<div
  className="curiosity-skeleton-container curiosity-skeleton-container-chart"
>
  <Skeleton
    size="lg"
  />
  <Skeleton
    size="md"
  />
</div>
`;

exports[`Loader Component should handle variant loader components: variant: default 1`] = `<Spinner />`;

exports[`Loader Component should handle variant loader components: variant: graph 1`] = `
<div
  className="curiosity-skeleton-container curiosity-skeleton-container-chart"
>
  <Skeleton
    size="lg"
  />
  <Skeleton
    size="md"
  />
</div>
`;

exports[`Loader Component should handle variant loader components: variant: paragraph 1`] = `
<div
  className="curiosity-skeleton-container"
>
  <Skeleton
    size="xs"
  />
  <Skeleton
    size="sm"
  />
  <Skeleton
    size="md"
  />
  <Skeleton
    size="lg"
  />
</div>
`;

exports[`Loader Component should handle variant loader components: variant: skeleton 1`] = `
<Skeleton
  size="sm"
/>
`;

exports[`Loader Component should handle variant loader components: variant: spinner 1`] = `<Spinner />`;

exports[`Loader Component should handle variant loader components: variant: table 1`] = `<TableSkeleton />`;

exports[`Loader Component should handle variant loader components: variant: title 1`] = `
<PageLayout>
  <PageHeader>
    <Skeleton
      size="sm"
    />
  </PageHeader>
</PageLayout>
`;

exports[`Loader Component should render a basic component: basic 1`] = `<Spinner />`;
